@@ -8,8 +8,9 @@ WP Movie Ratings changelog:
 - ability to set custom date the film was watched on (instead of assuming the current date) and display movie ratings based on this date instead of id.
 - new statistic: average movie rating for all rated movies.
 - fixed SQL errors when there are no movies rated.
-- fixed hardcoded wordpress table names which could result in errors during installation and usage.
-
+- fixed hardcoded wordpress table names which could have resulted in errors during installation and usage (no longer, hopefully).
+- fixed plugin activation problems on Windows machines.
+- magic quotes/strip slashes fixes.
 
 2006-06-27
 - sidebar mode, where movie ratings are on a separate line, so the box can be as thin as 170px for star ratings (images) and 100px for text ratings.
